--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "ajv": "^7.2.4",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2"
   },
